💄 Fix weird image stretch bug

--- a/src/style.styl
+++ b/src/style.styl
@@ -625,6 +625,7 @@ section.footnotes
 .made-with-page__logo
 	margin 2rem 0
 	height 4.5rem
+	object-fit contain
 
 a.arrow-link
 	weight-link()
